# Subtractor

./: README.md  requirements_dev.txt  setup.cfg
.github/workflows/: python-package.yml
src/old_code/: diff_calc.py
src/subtractor/: diff_calc.py
tests/: test_diff_calc.py
