[metadata]
name = subtractor
version = 0.0.1
url = https://github.com/Hitham2496/Subtractor
author = Hitham2496
description-file = README.md
description = subtracts numbers
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent


[options]
packages =
    subtractor
#install_requires =
#    numpy>0.1
python_requires = >=3.6
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9

[flake8]
max-line-length = 140
